# aircam-openwrt

./: feeds.conf.default  rules.mk
build_dir/host/autoconf-2.68/: Makefile  config.status
build_dir/host/automake-1.11.1/: Makefile  aclocal  aclocal.in  config.status
build_dir/host/bison-2.4.3/: Makefile  Makefile.in  aclocal.m4  config.status  configure
build_dir/host/cmake-2.8.4/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
build_dir/host/flex-2.5.35/: Makefile  config.h  (+1 more)
build_dir/host/mklibs/src/: Makefile  Makefile.am  Makefile.in  mklibs-copy.py
build_dir/host/mklibs/src/mklibs-readelf/: Makefile  Makefile.in  main.cpp  mklibs-readelf
build_dir/host/mklibs/src/mklibs-readelf/.deps/: elf.Po  main.Po
build_dir/host/quilt-0.48/: AUTHORS  Makefile  Makefile.in  TODO  changes2changelog  config.status  configure  configure.ac  quilt.changes  quilt.spec  quilt.spec.in
build_dir/host/quilt-0.48/autom4te.cache/: output.0  requests  traces.0
build_dir/host/quilt-0.48/compat/: awk  date.in  find  getopt.in  mktemp.in  patch
build_dir/host/quilt-0.48/doc/: Makefile  README.in  main.tex  quilt.1  quilt.1.in
build_dir/host/quilt-0.48/lib/: backup-files.c
build_dir/host/quilt-0.48/po/: de.po  fr.po  ja.po  quilt.pot
build_dir/host/quilt-0.48/quilt/: add.in  annotate.in  applied.in  diff.in  files.in  fold.in  grep.in  header.in  import.in  mail  mail.in  new.in  next.in  patches.in  pop.in  previous.in  push.in  refresh.in  rename.in  revert.in  series.in  setup.in  snapshot.in  top.in  unapplied.in  upgrade.in
build_dir/host/quilt-0.48/quilt/scripts/: dependency-graph.in  edmail  edmail.in  inspect.in  parse-patch  parse-patch.in  patchfns  patchfns.in  remove-trailing-ws  remove-trailing-ws.in
build_dir/host/quilt-0.48/test/: add-filename-check.test  annotate.test  applied.test  comments.test  conflicts.test  create-delete.test  delete.test  dir-a-b.test  dotglob.test  edit.test  empty.test  example1.test  failpop.test  fold.test  formats.test  half-applies.test  header.test  import.test  import2.test  mail.test  merge.test  missing.test  new-nosubdir.test  new.test  nolink.test  null-bug.test  one.test  patch-wrapper.test  perms.test  refresh-z.test  rename.test  revert.test  revert2.test  run  setup.test  snapshot.test  snapshot2.test  sort.test  subdir.test  test.quiltrc  (+3 more)
build_dir/linux-gm812x/: root.squashfs  vmlinux  vmlinux.elf  zImage
build_dir/linux-gm812x/linux-atm-2.5.2/src/extra/: Makefile  Makefile.am  Makefile.in  linux-atm.spec
build_dir/target-arm_v5te_uClibc-0.9.32_eabi/mm-common-0.9.2/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.status  configure  configure.ac
build_dir/target-arm_v5te_uClibc-0.9.32_eabi/mm-common-0.9.2/doctags/: mm-common-libstdc++-uninstalled.pc  mm-common-libstdc++.pc  mm-common-libstdc++.pc.in
build_dir/target-arm_v5te_uClibc-0.9.32_eabi/mm-common-0.9.2/macros/: mm-common.m4
build_dir/target-arm_v5te_uClibc-0.9.32_eabi/mm-common-0.9.2/skeletonmm/: configure.ac
build_dir/target-arm_v5te_uClibc-0.9.32_eabi/mm-common-0.9.2/skeletonmm/doc/reference/: Doxyfile.in
build_dir/target-arm_v5te_uClibc-0.9.32_eabi/mm-common-0.9.2/util/: mm-common-prepare  mm-common-prepare.1
build_dir/toolchain-arm_v5te_gcc-linaro_uClibc-0.9.32_eabi/: binutils  gcc  linux  uClibc
dl/: dosfstools-3.0.11.tar.bz2  ethtool-2.6.38.tar.bz2  lighttpd-1.4.31.tar.bz2
feeds/packages.tmp/: .packageinfo  location
include/: image.mk  kernel-defaults.mk
package/base-files/: Makefile
package/boa/: Makefile
package/bplay/: Makefile
package/busybox/: Makefile
package/cgilib/: Makefile
package/dvr/: Makefile
package/frammap/: Makefile
package/fscaler/: Makefile
package/libjson-c/: Makefile
package/libtdb/: Makefile
package/lighttpd/: Makefile
package/mac-telnet/: Makefile
package/matrixssl/: Makefile
package/nuttcp/: Makefile
package/openssh/: Makefile
package/tinysnmp/: Makefile
package/udpxy/: Makefile
staging_dir/toolchain-arm_v5te_gcc-linaro_uClibc-0.9.32_eabi/: info.mk
tmp/: .config  .config-package.in  .config-target.in  .config.old  .host.mk  .kconfig-adm5120_router_be  .kconfig-adm5120_router_le  .kconfig-adm8668  .kconfig-amazon  .kconfig-ar7  .kconfig-ar71xx  .kconfig-ar71xx_generic  .kconfig-ar71xx_nand  .kconfig-at91  .kconfig-at91_netus  .kconfig-at91_tqma9263  .kconfig-atheros  .kconfig-au1000_au1500  .kconfig-au1000_au1550  .kconfig-avr32  .kconfig-brcm47xx  .kconfig-brcm63xx  .kconfig-cns21xx  .kconfig-cns3xxx  .kconfig-cobalt  .kconfig-coldfire  .kconfig-ep93xx  .kconfig-etrax  .kconfig-gemini  .kconfig-gm812x  .kconfig-goldfish  .kconfig-imx21  .kconfig-iop32x  .kconfig-ixp4xx_generic  .kconfig-ixp4xx_harddisk  .kconfig-kirkwood  .kconfig-lantiq  .kconfig-lantiq_falcon  .kconfig-lantiq_xway  .kconfig-leon  (+47 more)
tmp/info/: .files-packageinfo-19964  .files-packageinfo.mk  .files-targetinfo-19964  .files-targetinfo.mk  .packageinfo-6in4  .packageinfo-6to4  .packageinfo-acx  .packageinfo-acx-mac80211  .packageinfo-admswconfig  .packageinfo-apex  .packageinfo-ar7-atm  .packageinfo-arptables  .packageinfo-base-files  .packageinfo-block-mount  .packageinfo-boa  .packageinfo-bplay  .packageinfo-bridge-utils  .packageinfo-broadcom-wl  .packageinfo-busybox  .packageinfo-cgilib  .packageinfo-comgt  .packageinfo-compcache  .packageinfo-crda  .packageinfo-cyassl  .packageinfo-dnsmasq  .packageinfo-dropbear  .packageinfo-dvr  .packageinfo-e2fsprogs  .packageinfo-ead  .packageinfo-ebtables  .packageinfo-fconfig  .packageinfo-feeds_packages_alsa-lib  .packageinfo-feeds_packages_alsa-utils  .packageinfo-feeds_packages_dosfstools  .packageinfo-feeds_packages_ethtool  .packageinfo-feeds_packages_gettext  .packageinfo-feeds_packages_iperf  .packageinfo-feeds_packages_libiconv  .packageinfo-feeds_packages_mini_snmpd  .packageinfo-feeds_packages_ntpclient  (+147 more)
tools/: Makefile
tools/ubnt-mkfwimage/: Makefile
(+6811 files in other folders)
